...
    NavigationDestination(
      icon: Icon(Icons.people_outline, key: Key('nav-drivers')),
      selectedIcon: Icon(Icons.people),
      label: context.l10n.drivers,
    ),
    NavigationDestination(
      icon: Icon(Icons.route_outlined, key: Key('nav-trips')),
      selectedIcon: Icon(Icons.route),
      label: context.l10n.trips,
    ),
    NavigationDestination(
      icon: const Icon(Icons.settings_outlined, key: Key('nav-settings')),
      selectedIcon: const Icon(Icons.settings),
      label: context.l10n.settings,
    ),
    NavigationDestination(
      icon: const Icon(
        Icons.manage_accounts_outlined,
...
